fix(`ComboBox`): ensure `Popover` width relates to the `Group` wrapping `ComboBox.Input`

--- a/src/popover/styles.css
+++ b/src/popover/styles.css
@@ -59,6 +59,10 @@
         width: calc(var(--trigger-width) + var(--space-1));
     }
 
+    &[data-trigger="Group"] {
+        width: calc(var(--trigger-width) + var(--space-1) + 2px);
+    }
+
     &[data-trigger="DatePicker"] {
         width: unset;
     }
